# python-libnest2d

./: .gitignore  CMakeLists.txt  COPYING.GPL3  NOTICE  README.md  README.pypi.md  THIRD_PARTY_LICENSES  bindings.cpp  pynest2d.pyi  pyproject.toml
.github/workflows/: build-wheels.yml
